# finprob

./: .gitignore  CHANGELOG.md  README.md  _CoqProject  finprob.opam  flake.nix
theories/: complements.v  extructures_complements.v  finmap_complements.v  prob.v
